--- a/Client/src/main/resources/pt/isec/a2021138502/PD_Splitwise/ui/groups_page.fxml
+++ b/Client/src/main/resources/pt/isec/a2021138502/PD_Splitwise/ui/groups_page.fxml
@@ -16,7 +16,7 @@
     <bottom>
         <HBox alignment="CENTER" spacing="5.0" BorderPane.alignment="CENTER">
             <children>
-                <Button fx:id="btnGroups" disable="true" mnemonicParsing="false" text="Groups" HBox.hgrow="ALWAYS"/>
+                <Button fx:id="btnGroups" mnemonicParsing="false" text="Groups" HBox.hgrow="ALWAYS"/>
                 <Button fx:id="btnInvites" layoutX="184.0" layoutY="48.0" mnemonicParsing="false" text="Invites"
                         HBox.hgrow="ALWAYS"/>
                 <Button fx:id="btnUser" layoutX="210.0" layoutY="48.0" mnemonicParsing="false" text="User"
