--- a/Client/src/main/resources/pt/isec/a2021138502/PD_Splitwise/ui/invites_page.fxml
+++ b/Client/src/main/resources/pt/isec/a2021138502/PD_Splitwise/ui/invites_page.fxml
@@ -2,16 +2,11 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Text?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="homePane" prefHeight="600.0" prefWidth="400.0"
             xmlns="http://javafx.com/javafx/20.0.1"
             fx:controller="pt.isec.a2021138502.PD_Splitwise.ui.controller.InvitesController">
     <center>
-        <VBox fx:id="vbInvites" alignment="CENTER">
-            <children>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Invites page" textAlignment="CENTER"/>
-            </children>
-        </VBox>
+        <VBox fx:id="vbInvites" alignment="CENTER"/>
     </center>
     <bottom>
         <HBox alignment="CENTER" spacing="5.0" BorderPane.alignment="CENTER">
