--- a/Client/src/main/resources/pt/isec/a2021138502/PD_Splitwise/ui/user_page.fxml
+++ b/Client/src/main/resources/pt/isec/a2021138502/PD_Splitwise/ui/user_page.fxml
@@ -1,27 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.*?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="homePane" prefHeight="600.0" prefWidth="400.0"
             xmlns="http://javafx.com/javafx/20.0.1"
             fx:controller="pt.isec.a2021138502.PD_Splitwise.ui.controller.UserController">
     <center>
-        <VBox alignment="CENTER">
+        <VBox alignment="CENTER" spacing="5.0">
             <children>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="User page" textAlignment="CENTER"/>
+                <HBox alignment="CENTER_LEFT">
+                    <children>
+                        <Label text="Username:">
+                            <font>
+                                <Font size="18.0"/>
+                            </font>
+                        </Label>
+                        <Text fx:id="txtUsername" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                            <font>
+                                <Font size="18.0"/>
+                            </font>
+                        </Text>
+                    </children>
+                </HBox>
+                <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="248.0">
+                    <children>
+                        <Label text="Phone number: ">
+                            <font>
+                                <Font size="18.0"/>
+                            </font>
+                        </Label>
+                        <Text fx:id="txtPhoneNumber" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                            <font>
+                                <Font size="18.0"/>
+                            </font>
+                        </Text>
+                    </children>
+                </HBox>
+                <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="298.0">
+                    <children>
+                        <Label text="Email: ">
+                            <font>
+                                <Font size="18.0"/>
+                            </font>
+                        </Label>
+                        <Text fx:id="txtEmail" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                            <font>
+                                <Font size="18.0"/>
+                            </font>
+                        </Text>
+                    </children>
+                </HBox>
+                <Button fx:id="btnEdit" mnemonicParsing="false" text="Edit"/>
             </children>
+            <BorderPane.margin>
+                <Insets left="80.0" right="80.0"/>
+            </BorderPane.margin>
         </VBox>
     </center>
     <bottom>
         <HBox alignment="CENTER" spacing="5.0" BorderPane.alignment="CENTER">
-            <children>
-                <Button fx:id="btnGroups" mnemonicParsing="false" text="Groups" HBox.hgrow="ALWAYS"/>
-                <Button fx:id="btnInvites" layoutX="184.0" layoutY="48.0" mnemonicParsing="false" text="Invites"
-                        HBox.hgrow="ALWAYS"/>
-                <Button fx:id="btnUser" layoutX="210.0" layoutY="48.0" mnemonicParsing="false" text="User"
-                        HBox.hgrow="ALWAYS"/>
-            </children>
+            <Button fx:id="btnGroups" mnemonicParsing="false" text="Groups" HBox.hgrow="ALWAYS"/>
+            <Button fx:id="btnInvites" layoutX="184.0" layoutY="48.0" mnemonicParsing="false" text="Invites"
+                    HBox.hgrow="ALWAYS"/>
+            <Button fx:id="btnUser" layoutX="210.0" layoutY="48.0" mnemonicParsing="false" text="User"
+                    HBox.hgrow="ALWAYS"/>
         </HBox>
     </bottom>
 </BorderPane>
