--- a/Client/src/main/resources/pt/isec/a2021138502/PD_Splitwise/ui/login.fxml
+++ b/Client/src/main/resources/pt/isec/a2021138502/PD_Splitwise/ui/login.fxml
@@ -12,7 +12,7 @@
     <VBox alignment="TOP_CENTER" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="100.0"
           AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="0.0">
         <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true"/>
-        <TextField fx:id="tfUsername" promptText="Enter username" VBox.vgrow="ALWAYS"/>
+        <TextField fx:id="tfEmail" promptText="Enter username" VBox.vgrow="ALWAYS"/>
         <PasswordField fx:id="tfPassword" promptText="Enter password" VBox.vgrow="ALWAYS"/>
         <Button fx:id="btnLogin" text="Login"/>
         <Hyperlink fx:id="hpSignUp" text="Sign up"/>
