--- a/Client/src/main/resources/pt/isec/a2021138502/PD_Splitwise/ui/groups_page.fxml
+++ b/Client/src/main/resources/pt/isec/a2021138502/PD_Splitwise/ui/groups_page.fxml
@@ -1,28 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="homePane" prefHeight="600.0" prefWidth="400.0"
             xmlns="http://javafx.com/javafx/20.0.1"
             fx:controller="pt.isec.a2021138502.PD_Splitwise.ui.controller.GroupsController">
     <center>
-        <VBox fx:id="vbGroups" alignment="CENTER" spacing="5.0">
-            <BorderPane.margin>
-                <Insets left="15.0" right="15.0"/>
-            </BorderPane.margin>
-        </VBox>
+        <VBox fx:id="vbGroups" alignment="TOP_CENTER"/>
     </center>
     <bottom>
-        <HBox alignment="CENTER" spacing="5.0" BorderPane.alignment="CENTER">
+        <VBox BorderPane.alignment="CENTER">
             <BorderPane.margin>
                 <Insets/>
             </BorderPane.margin>
-            <Button fx:id="btnGroups" mnemonicParsing="false" text="Groups" HBox.hgrow="ALWAYS"/>
-            <Button fx:id="btnInvites" layoutX="184.0" layoutY="48.0" mnemonicParsing="false" text="Invites"
-                    HBox.hgrow="ALWAYS"/>
-            <Button fx:id="btnUser" layoutX="210.0" layoutY="48.0" mnemonicParsing="false" text="User"
-                    HBox.hgrow="ALWAYS"/>
-        </HBox>
+            <Separator prefWidth="200.0"/>
+            <HBox alignment="CENTER" spacing="5.0">
+                <Button fx:id="btnGroups" mnemonicParsing="false" text="Groups" HBox.hgrow="ALWAYS">
+                    <font>
+                        <Font size="13.0"/>
+                    </font>
+                </Button>
+                <Button fx:id="btnInvites" layoutX="184.0" layoutY="48.0" mnemonicParsing="false" text="Invites"
+                        HBox.hgrow="ALWAYS">
+                    <font>
+                        <Font size="13.0"/>
+                    </font>
+                </Button>
+                <Button fx:id="btnUser" layoutX="210.0" layoutY="48.0" mnemonicParsing="false" text="User"
+                        HBox.hgrow="ALWAYS">
+                    <font>
+                        <Font size="13.0"/>
+                    </font>
+                </Button>
+                <VBox.margin>
+                    <Insets bottom="15.0" top="8.0"/>
+                </VBox.margin>
+            </HBox>
+        </VBox>
     </bottom>
+    <top>
+        <VBox alignment="CENTER" BorderPane.alignment="CENTER">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Groups" textAlignment="CENTER">
+                <font>
+                    <Font name="System Bold" size="24.0"/>
+                </font>
+            </Text>
+            <Button fx:id="btnCreateGroup" mnemonicParsing="false" text="Create Group">
+                <font>
+                    <Font size="13.0"/>
+                </font>
+                <VBox.margin>
+                    <Insets bottom="8.0"/>
+                </VBox.margin>
+            </Button>
+            <Separator prefWidth="200.0"/>
+        </VBox>
+    </top>
 </BorderPane>
