--- a/Client/src/main/resources/pt/isec/a2021138502/PD_Splitwise/ui/user_page.fxml
+++ b/Client/src/main/resources/pt/isec/a2021138502/PD_Splitwise/ui/user_page.fxml
@@ -9,63 +9,89 @@
             fx:controller="pt.isec.a2021138502.PD_Splitwise.ui.controller.UserController">
     <center>
         <VBox alignment="CENTER" spacing="5.0">
-            <children>
-                <HBox alignment="CENTER_LEFT">
-                    <children>
-                        <Label text="Username:">
-                            <font>
-                                <Font size="18.0"/>
-                            </font>
-                        </Label>
-                        <Text fx:id="txtUsername" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
-                            <font>
-                                <Font size="18.0"/>
-                            </font>
-                        </Text>
-                    </children>
-                </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="248.0">
-                    <children>
-                        <Label text="Phone number: ">
-                            <font>
-                                <Font size="18.0"/>
-                            </font>
-                        </Label>
-                        <Text fx:id="txtPhoneNumber" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
-                            <font>
-                                <Font size="18.0"/>
-                            </font>
-                        </Text>
-                    </children>
-                </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="298.0">
-                    <children>
-                        <Label text="Email: ">
-                            <font>
-                                <Font size="18.0"/>
-                            </font>
-                        </Label>
-                        <Text fx:id="txtEmail" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
-                            <font>
-                                <Font size="18.0"/>
-                            </font>
-                        </Text>
-                    </children>
-                </HBox>
-                <Button fx:id="btnEdit" mnemonicParsing="false" text="Edit"/>
-            </children>
             <BorderPane.margin>
                 <Insets left="80.0" right="80.0"/>
             </BorderPane.margin>
+            <HBox alignment="CENTER_LEFT">
+                <Label text="Username:">
+                    <font>
+                        <Font size="18.0"/>
+                    </font>
+                </Label>
+                <Text fx:id="txtUsername" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                    <font>
+                        <Font size="18.0"/>
+                    </font>
+                </Text>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="248.0">
+                <Label text="Phone number: ">
+                    <font>
+                        <Font size="18.0"/>
+                    </font>
+                </Label>
+                <Text fx:id="txtPhoneNumber" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                    <font>
+                        <Font size="18.0"/>
+                    </font>
+                </Text>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="298.0">
+                <Label text="Email: ">
+                    <font>
+                        <Font size="18.0"/>
+                    </font>
+                </Label>
+                <Text fx:id="txtEmail" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                    <font>
+                        <Font size="18.0"/>
+                    </font>
+                </Text>
+            </HBox>
+            <Button fx:id="btnEdit" mnemonicParsing="false" text="Edit"/>
         </VBox>
     </center>
     <bottom>
-        <HBox alignment="CENTER" spacing="5.0" BorderPane.alignment="CENTER">
-            <Button fx:id="btnGroups" mnemonicParsing="false" text="Groups" HBox.hgrow="ALWAYS"/>
-            <Button fx:id="btnInvites" layoutX="184.0" layoutY="48.0" mnemonicParsing="false" text="Invites"
-                    HBox.hgrow="ALWAYS"/>
-            <Button fx:id="btnUser" layoutX="210.0" layoutY="48.0" mnemonicParsing="false" text="User"
-                    HBox.hgrow="ALWAYS"/>
-        </HBox>
+        <VBox>
+            <Separator prefWidth="200.0"/>
+            <HBox alignment="CENTER" spacing="5.0">
+                <VBox.margin>
+                    <Insets bottom="15.0" top="8.0"/>
+                </VBox.margin>
+                <Button fx:id="btnGroups" mnemonicParsing="false" text="Groups" HBox.hgrow="ALWAYS">
+                    <font>
+                        <Font size="13.0"/>
+                    </font>
+                </Button>
+                <Button fx:id="btnInvites" layoutX="184.0" layoutY="48.0" mnemonicParsing="false" text="Invites"
+                        HBox.hgrow="ALWAYS">
+                    <font>
+                        <Font size="13.0"/>
+                    </font>
+                </Button>
+                <Button fx:id="btnUser" layoutX="210.0" layoutY="48.0" mnemonicParsing="false" text="User"
+                        HBox.hgrow="ALWAYS">
+                    <font>
+                        <Font size="13.0"/>
+                    </font>
+                </Button>
+            </HBox>
+        </VBox>
     </bottom>
+    <top>
+        <VBox alignment="CENTER">
+            <Text fx:id="txtGroupName" strokeType="OUTSIDE" strokeWidth="0.0" text="User" textAlignment="CENTER">
+                <font>
+                    <Font name="System Bold" size="24.0"/>
+                </font>
+            </Text>
+            <HBox alignment="CENTER" spacing="5.0">
+                <padding>
+                    <Insets bottom="8.0"/>
+                </padding>
+                <Button fx:id="btnLogout" mnemonicParsing="false" text="Logout"/>
+            </HBox>
+            <Separator prefWidth="200.0"/>
+        </VBox>
+    </top>
 </BorderPane>
