--- a/Client/src/main/resources/pt/isec/a2021138502/PD_Splitwise/ui/group_page.fxml
+++ b/Client/src/main/resources/pt/isec/a2021138502/PD_Splitwise/ui/group_page.fxml
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="homePane" prefHeight="600.0" prefWidth="400.0"
-            xmlns="http://javafx.com/javafx/20.0.1"
-            fx:controller="pt.isec.a2021138502.PD_Splitwise.ui.controller.GroupController">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+
+<BorderPane fx:id="homePane" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pt.isec.a2021138502.PD_Splitwise.ui.controller.GroupController">
     <bottom>
         <VBox>
-            <Separator prefWidth="200.0"/>
+            <Separator prefWidth="200.0" />
             <HBox alignment="CENTER" spacing="5.0">
                 <VBox.margin>
-                    <Insets bottom="15.0" top="8.0"/>
+                    <Insets bottom="15.0" top="8.0" />
                 </VBox.margin>
                 <Button fx:id="btnGroups" mnemonicParsing="false" text="Groups" HBox.hgrow="ALWAYS">
                     <font>
-                        <Font size="13.0"/>
+                        <Font size="13.0" />
                     </font>
                 </Button>
-                <Button fx:id="btnInvites" layoutX="184.0" layoutY="48.0" mnemonicParsing="false" text="Invites"
-                        HBox.hgrow="ALWAYS">
+                <Button fx:id="btnInvites" layoutX="184.0" layoutY="48.0" mnemonicParsing="false" text="Invites" HBox.hgrow="ALWAYS">
                     <font>
-                        <Font size="13.0"/>
+                        <Font size="13.0" />
                     </font>
                 </Button>
-                <Button fx:id="btnUser" layoutX="210.0" layoutY="48.0" mnemonicParsing="false" text="User"
-                        HBox.hgrow="ALWAYS">
+                <Button fx:id="btnUser" layoutX="210.0" layoutY="48.0" mnemonicParsing="false" text="User" HBox.hgrow="ALWAYS">
                     <font>
-                        <Font size="13.0"/>
+                        <Font size="13.0" />
                     </font>
                 </Button>
             </HBox>
@@ -36,29 +37,36 @@
     </bottom>
     <center>
         <VBox alignment="CENTER">
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text"/>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text"/>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text"/>
-            <VBox fx:id="vbMembers" prefHeight="200.0" prefWidth="100.0"/>
+            <VBox fx:id="vbMembers" alignment="CENTER" />
         </VBox>
     </center>
     <top>
         <VBox alignment="CENTER" BorderPane.alignment="CENTER">
             <Text fx:id="txtGroupName" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER">
                 <font>
-                    <Font name="System Bold" size="24.0"/>
+                    <Font name="System Bold" size="24.0" />
                 </font>
             </Text>
             <HBox alignment="CENTER" spacing="5.0">
                 <padding>
+                    <Insets bottom="8.0" />
+                </padding>
+                <Button fx:id="btnInvite" mnemonicParsing="false" text="Invite" />
+                <Button fx:id="btnEdit" mnemonicParsing="false" text="Edit" />
+                <Button fx:id="btnDelete" layoutX="239.0" layoutY="10.0" mnemonicParsing="false" text="Delete" />
+                <Button fx:id="btnExit" mnemonicParsing="false" text="Exit" />
+            </HBox>
+            <Separator prefWidth="200.0" />
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="42.0" spacing="5.0">
+                <padding>
                     <Insets bottom="8.0"/>
                 </padding>
-                <Button fx:id="btnInvite" mnemonicParsing="false" text="Invite"/>
-                <Button fx:id="btnEdit" mnemonicParsing="false" text="Edit"/>
-                <Button fx:id="btnDelete" layoutX="239.0" layoutY="10.0" mnemonicParsing="false" text="Delete"/>
-                <Button fx:id="btnExit" mnemonicParsing="false" text="Exit"/>
+                <Button fx:id="btnPay" mnemonicParsing="false" text="Pay"/>
+                <Button fx:id="btnBalance" layoutX="193.0" layoutY="10.0" mnemonicParsing="false" text="Balance"/>
+                <Button fx:id="btnTotalSpend" layoutX="202.0" layoutY="10.0" mnemonicParsing="false"
+                        text="Total Spend"/>
+                <Button fx:id="btnExport" layoutX="221.0" layoutY="10.0" mnemonicParsing="false" text="Export"/>
             </HBox>
-            <Separator prefWidth="200.0"/>
         </VBox>
     </top>
 </BorderPane>
