--- a/Client/src/main/resources/pt/isec/a2021138502/PD_Splitwise/ui/user_preview.fxml
+++ b/Client/src/main/resources/pt/isec/a2021138502/PD_Splitwise/ui/user_preview.fxml
@@ -3,7 +3,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Text?>
-<HBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+<HBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity"
+      minHeight="-Infinity"
       minWidth="-Infinity" spacing="8.0" xmlns="http://javafx.com/javafx/20.0.1"
       fx:controller="pt.isec.a2021138502.PD_Splitwise.ui.controller.UserPreviewController">
     <padding>
