--- a/Client/src/main/resources/pt/isec/pd/client/views/groups_view.fxml
+++ b/Client/src/main/resources/pt/isec/pd/client/views/groups_view.fxml
@@ -9,11 +9,8 @@
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="600.0" prefWidth="400.0"
             xmlns="http://javafx.com/javafx/20.0.1"
             fx:controller="pt.isec.pd.client.ui.controller.view.GroupsController">
-    <center>
-        <VBox fx:id="vbGroups" alignment="TOP_CENTER"/>
-    </center>
     <top>
-        <VBox alignment="CENTER" BorderPane.alignment="CENTER">
+        <VBox alignment="CENTER">
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Groups" textAlignment="CENTER">
                 <font>
                     <Font name="System Bold" size="24.0"/>
@@ -30,6 +27,9 @@
             <Separator prefWidth="200.0"/>
         </VBox>
     </top>
+    <center>
+        <VBox fx:id="vbGroups" alignment="TOP_CENTER"/>
+    </center>
     <bottom>
         <fx:include source="../components/navbar.fxml"/>
     </bottom>
