--- a/Client/src/main/resources/pt/isec/pd/client/views/invites_view.fxml
+++ b/Client/src/main/resources/pt/isec/pd/client/views/invites_view.fxml
@@ -2,9 +2,22 @@
 
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.Separator?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="homePane" prefHeight="600.0" prefWidth="400.0"
             xmlns="http://javafx.com/javafx/20.0.1"
             fx:controller="pt.isec.pd.client.ui.controller.view.InvitesController">
+    <top>
+        <VBox alignment="CENTER">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Invites" textAlignment="CENTER">
+                <font>
+                    <Font name="System Bold" size="24.0"/>
+                </font>
+            </Text>
+            <Separator prefWidth="200.0"/>
+        </VBox>
+    </top>
     <center>
         <VBox fx:id="vbInvites" alignment="CENTER"/>
     </center>
