--- a/Client/src/main/resources/pt/isec/pd/splitwise/client/components/navbar.fxml
+++ b/Client/src/main/resources/pt/isec/pd/splitwise/client/components/navbar.fxml
@@ -3,33 +3,37 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" BorderPane.alignment="CENTER" xmlns="http://javafx.com/javafx/20.0.1"
-      fx:controller="pt.isec.pd.splitwise.client.ui.controller.NavBarController">
+
+<VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" stylesheets="@../styles/navBar.css" BorderPane.alignment="CENTER" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pt.isec.pd.splitwise.client.ui.controller.NavBarController">
     <BorderPane.margin>
-        <Insets/>
+        <Insets />
     </BorderPane.margin>
-    <Separator prefWidth="200.0"/>
-    <HBox alignment="CENTER" spacing="5.0">
+    <Separator />
+    <HBox alignment="CENTER" spacing="12.0">
         <Button fx:id="btnGroups" mnemonicParsing="false" text="Groups" HBox.hgrow="ALWAYS">
             <font>
-                <Font size="13.0"/>
+                <Font size="13.0" />
             </font>
         </Button>
-        <Button fx:id="btnInvites" layoutX="184.0" layoutY="48.0" mnemonicParsing="false" text="Invites"
-                HBox.hgrow="ALWAYS">
+        <Button fx:id="btnInvites" layoutX="184.0" layoutY="48.0" mnemonicParsing="false" text="Invites" HBox.hgrow="ALWAYS">
             <font>
-                <Font size="13.0"/>
+                <Font size="13.0" />
             </font>
         </Button>
         <Button fx:id="btnUser" layoutX="210.0" layoutY="48.0" mnemonicParsing="false" text="User" HBox.hgrow="ALWAYS">
             <font>
-                <Font size="13.0"/>
+                <Font size="13.0" />
             </font>
         </Button>
         <VBox.margin>
-            <Insets bottom="15.0" top="8.0"/>
+            <Insets bottom="15.0" top="8.0" />
         </VBox.margin>
+      <padding>
+         <Insets left="8.0" right="8.0" />
+      </padding>
     </HBox>
 </VBox>
