--- a/Client/src/main/resources/pt/isec/pd/splitwise/client/views/group_view.fxml
+++ b/Client/src/main/resources/pt/isec/pd/splitwise/client/views/group_view.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.dlsc.gemsfx.MaskedView?>
 <?import com.dlsc.gemsfx.Spacer?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
@@ -15,20 +14,19 @@
 <BorderPane prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pt.isec.pd.splitwise.client.ui.controller.view.GroupController">
     <center>
         <VBox BorderPane.alignment="TOP_CENTER">
-         <MaskedView fx:id="maskedView" />
-            <ScrollPane fx:id="scrollPane" fitToHeight="true" hbarPolicy="NEVER" minViewportHeight="38.0" pannable="true" vbarPolicy="NEVER" VBox.vgrow="SOMETIMES">
-                <HBox alignment="CENTER_LEFT" spacing="12.0">
-                    <Button fx:id="btnAddExpense" layoutX="92.0" layoutY="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Add Expense" textAlignment="CENTER" HBox.hgrow="ALWAYS" />
-                    <Button fx:id="btnPay" lineSpacing="8.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Pay Expense" textAlignment="CENTER" HBox.hgrow="ALWAYS" />
-                    <Button fx:id="btnBalance" layoutX="193.0" layoutY="10.0" lineSpacing="8.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Balance" textAlignment="CENTER" HBox.hgrow="ALWAYS" />
-                    <Button fx:id="btnTotalSpend" layoutX="202.0" layoutY="10.0" lineSpacing="8.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Total Spend" textAlignment="CENTER" HBox.hgrow="ALWAYS" />
-               <Button fx:id="btnHistory" layoutX="285.0" layoutY="18.0" lineSpacing="8.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="History" textAlignment="CENTER" />
-                    <Button fx:id="btnExport" layoutX="221.0" layoutY="10.0" lineSpacing="8.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Export" textAlignment="CENTER" HBox.hgrow="ALWAYS" />
-               <padding>
-                  <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
-               </padding>
-                </HBox>
-            </ScrollPane>
+             <HBox alignment="CENTER" spacing="8.0">
+                 <Button fx:id="btnAddExpense" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Add Expense" textAlignment="CENTER" />
+                 <Button fx:id="btnPay" lineSpacing="8.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Pay" textAlignment="CENTER" />
+                 <Button fx:id="btnBalance" lineSpacing="8.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Balance" textAlignment="CENTER" />
+                 <Button fx:id="btnTotalSpend" lineSpacing="8.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Total" textAlignment="CENTER" />
+                 <Button fx:id="btnExport" lineSpacing="8.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Export" textAlignment="CENTER" />
+            <padding>
+               <Insets bottom="10.0" left="8.0" right="8.0" top="8.0" />
+            </padding>
+            <VBox.margin>
+               <Insets />
+            </VBox.margin>
+             </HBox>
             <ScrollPane fitToWidth="true" hbarPolicy="NEVER" pannable="true" vbarPolicy="NEVER" VBox.vgrow="ALWAYS">
                 <VBox fx:id="vbExpenses" alignment="TOP_CENTER" spacing="4.0">
                     <padding>
@@ -36,6 +34,9 @@
                     </padding>
                 </VBox>
             </ScrollPane>
+         <BorderPane.margin>
+            <Insets top="8.0" />
+         </BorderPane.margin>
         </VBox>
     </center>
     <top>
@@ -53,7 +54,7 @@
                 <Spacer />
                 <Button fx:id="btnSettings" mnemonicParsing="false" style="-fx-background-color: transparent;;">
                     <graphic>
-                        <FontIcon iconLiteral="di-aptana" iconSize="20" />
+                        <FontIcon iconLiteral="bi-gear-fill" iconSize="20" />
                     </graphic>
                 </Button>
             </HBox>
