--- a/Client/src/main/resources/pt/isec/pd/splitwise/client/views/group_view.fxml
+++ b/Client/src/main/resources/pt/isec/pd/splitwise/client/views/group_view.fxml
@@ -15,6 +15,7 @@
     <center>
         <VBox BorderPane.alignment="TOP_CENTER">
              <HBox alignment="CENTER" spacing="8.0">
+            <Button fx:id="btnExpenses" layoutX="59.0" layoutY="18.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Expenses" textAlignment="CENTER" />
                  <Button fx:id="btnAddExpense" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Add Expense" textAlignment="CENTER" />
                  <Button fx:id="btnPay" lineSpacing="8.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Pay" textAlignment="CENTER" />
                  <Button fx:id="btnBalance" lineSpacing="8.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Balance" textAlignment="CENTER" />
@@ -28,7 +29,7 @@
             </VBox.margin>
              </HBox>
             <ScrollPane fitToWidth="true" hbarPolicy="NEVER" pannable="true" vbarPolicy="NEVER" VBox.vgrow="ALWAYS">
-                <VBox fx:id="vbExpenses" alignment="TOP_CENTER" spacing="4.0">
+                <VBox fx:id="vbInfo" alignment="TOP_CENTER" spacing="4.0">
                     <padding>
                         <Insets left="8.0" right="8.0" top="8.0" />
                     </padding>
