--- a/Client/src/main/resources/pt/isec/pd/splitwise/client/views/groups_view.fxml
+++ b/Client/src/main/resources/pt/isec/pd/splitwise/client/views/groups_view.fxml
@@ -3,31 +3,32 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
-<BorderPane prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pt.isec.pd.splitwise.client.ui.controller.view.GroupsController">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="600.0" prefWidth="400.0"
+            xmlns="http://javafx.com/javafx/20.0.1"
+            fx:controller="pt.isec.pd.splitwise.client.ui.controller.view.GroupsController">
     <top>
         <VBox alignment="CENTER_RIGHT">
             <Button fx:id="btnCreateGroup" mnemonicParsing="false" text="Create Group">
                 <font>
-                    <Font size="13.0" />
+                    <Font size="13.0"/>
                 </font>
                 <VBox.margin>
-                    <Insets bottom="10.0" right="12.0" top="10.0" />
+                    <Insets bottom="10.0" right="12.0" top="10.0"/>
                 </VBox.margin>
             </Button>
             <Separator prefWidth="200.0">
-            <VBox.margin>
-               <Insets />
-            </VBox.margin></Separator>
+                <VBox.margin>
+                    <Insets/>
+                </VBox.margin>
+            </Separator>
         </VBox>
     </top>
     <center>
-        <VBox fx:id="vbGroups" alignment="TOP_CENTER" />
+        <VBox fx:id="vbGroups" alignment="TOP_CENTER"/>
     </center>
     <bottom>
-        <fx:include source="../components/navbar.fxml" />
+        <fx:include source="../components/navbar.fxml"/>
     </bottom>
 </BorderPane>
