--- a/Client/src/main/resources/pt/isec/pd/splitwise/client/views/expense_view.fxml
+++ b/Client/src/main/resources/pt/isec/pd/splitwise/client/views/expense_view.fxml
@@ -4,7 +4,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity"
             prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/20.0.1"
             fx:controller="pt.isec.pd.splitwise.client.ui.controller.view.ExpenseController">
     <top>
