--- a/Client/src/main/resources/pt/isec/pd/splitwise/client/views/add_expense_view.fxml
+++ b/Client/src/main/resources/pt/isec/pd/splitwise/client/views/add_expense_view.fxml
@@ -7,7 +7,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <?import org.controlsfx.control.CheckComboBox?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity"
             prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/20.0.1"
             fx:controller="pt.isec.pd.splitwise.client.ui.controller.view.AddExpenseController">
     <top>
