--- a/Client/src/main/resources/pt/isec/pd/splitwise/client/styles/card.css
+++ b/Client/src/main/resources/pt/isec/pd/splitwise/client/styles/card.css
@@ -31,6 +31,7 @@
     -fx-font-size: 14;
 }
 
+/*TODO: complete styles*/
 #invite-card {
     -fx-background-color: #f5f5f5;
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 10, 0, 0, 4);
