--- a/Client/src/main/resources/pt/isec/pd/splitwise/client/views/payment_view.fxml
+++ b/Client/src/main/resources/pt/isec/pd/splitwise/client/views/payment_view.fxml
@@ -10,13 +10,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pt.isec.pd.splitwise.client.ui.controller.view.ExpenseController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pt.isec.pd.splitwise.client.ui.controller.view.PaymentController">
     <top>
         <VBox alignment="TOP_CENTER" spacing="8.0" BorderPane.alignment="CENTER">
             <padding>
                 <Insets top="8.0" />
             </padding>
-            <Text fx:id="txtGroupName" strokeType="OUTSIDE" strokeWidth="0.0" text="Expense" textAlignment="CENTER">
+            <Text fx:id="txtGroupName" strokeType="OUTSIDE" strokeWidth="0.0" text="Payment" textAlignment="CENTER">
                 <font>
                     <Font name="System Bold" size="18.0" />
                 </font>
@@ -37,14 +37,6 @@
                 </Label>
                 <Text fx:id="tfAmount" HBox.hgrow="ALWAYS" />
             </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="254.0" spacing="8.0">
-                <Label minHeight="-Infinity" minWidth="-Infinity" text="Description:" HBox.hgrow="ALWAYS">
-                    <font>
-                        <Font size="14.0" />
-                    </font>
-                </Label>
-                <Text fx:id="tfDescription" HBox.hgrow="ALWAYS" />
-            </HBox>
             <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="208.0" spacing="8.0">
                 <Label minHeight="-Infinity" minWidth="-Infinity" text="Date:">
                     <font>
@@ -54,20 +46,20 @@
                 <Text fx:id="tfDate" HBox.hgrow="ALWAYS" />
             </HBox>
             <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="350.0" spacing="8.0">
-                <Label minHeight="-Infinity" minWidth="-Infinity" text="Payer:">
+                <Label minHeight="-Infinity" minWidth="-Infinity" text="From:">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Text fx:id="tfPayerUser" HBox.hgrow="ALWAYS" />
+                <Text fx:id="tfFromUser" HBox.hgrow="ALWAYS" />
             </HBox>
             <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="369.0" spacing="8.0">
-                <Label minHeight="-Infinity" minWidth="-Infinity" text="User associated:">
+                <Label minHeight="-Infinity" minWidth="-Infinity" text="To:">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Text fx:id="tfAssociatedUsers" HBox.hgrow="ALWAYS" />
+                <Text fx:id="tfToUser" HBox.hgrow="ALWAYS" />
             </HBox>
             <BorderPane.margin>
                 <Insets left="64.0" right="64.0" />
