--- a/Client/src/main/resources/pt/isec/pd/splitwise/client/views/expense_view.fxml
+++ b/Client/src/main/resources/pt/isec/pd/splitwise/client/views/expense_view.fxml
@@ -61,7 +61,7 @@
                 </Label>
                 <Text fx:id="tfPayerUser" HBox.hgrow="ALWAYS" />
             </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="369.0" spacing="8.0">
+            <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="369.0" spacing="8.0">
                 <Label minHeight="-Infinity" minWidth="-Infinity" text="User associated:">
                     <font>
                         <Font size="14.0" />
